<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <!-- 🔙 Botón Volver -->
    <Button
        android:id="@+id/btnVolver"
        style="@style/BotonMenuLateral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_volver"
        android:layout_margin="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <!-- 📌 Logo en la esquina superior derecha -->
    <ImageView
        android:id="@+id/logoApp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:adjustViewBounds="true"
        android:background="@drawable/borde_imagen"
        android:padding="6dp"
        android:contentDescription="@string/cd_logo" />

    <!-- 🖼️ Imagen ampliada a pantalla completa -->
    <ImageView
        android:id="@+id/imgCompleta"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/btnVolver"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cd_plato" />
</RelativeLayout>


